# NormChineseChess

./: .clang-format  .gitignore  CMakeLists.txt
core/: Board.cpp  CMakeLists.txt  ChessLang.cpp  ChineseChess.cpp  ChineseChess.h  Game.cpp  Game.h
textui/: Main.cpp
